# evrp

./: .gitignore  .gitmodules  CMakeLists.txt  LIBRARY.md  LICENSE  argparser.cpp  argparser.h  asynclogwriter.cpp  asynclogwriter.h  cursorpos.cpp  deviceid.cpp  deviceid.h  evdev.cpp  evdev.h  eventformat.cpp  eventformat.h  filesystem.cpp  filesystem.h  input_device.cpp  input_device.h  inputdevice.cpp  inputdevice.h  inputeventwriter.cpp  inputeventwriter.h  keyboarddevice.cpp  keyboarddevice.h  keyboardeventwriter.cpp  keyboardeventwriter.h  logger.cpp  logger.h  lua_bindings.cpp  lua_bindings.h  main.cpp  playback.cpp  playback.h  record.cpp  record.h  scopeguard.h  touchdevice.cpp  touchdevice.h
.cursor/rules/: naming-conventions.mdc  no-goto.mdc  unit-test-isolation.mdc
cursor/: cursorpos.cpp  cursorpos.h  cursorposbackend.h  cursorposx11.cpp  cursorposx11.h
docs/: API_LAYER.md  ARCHITECTURE_SPLIT_PLAN.md  EVRP_DEVICE_DEVELOPMENT_PLAN.md  PROJECT_CONVENTIONS.md
evdev/: evdev.h  evdev_linux.cpp  evdevlinux.cpp
evrp/: countingsemaphore.cpp  countingsemaphore.h  ioc.h
evrp-client/: CMakeLists.txt  argparser.cpp  argparser.h  main.cpp  runner.cpp  runner.h
evrp-device/: CMakeLists.txt  README.md  device_service.cpp  device_service.h  integrationtest.cpp  main.cpp
evrp-device/grpc/: grpc_input_device_service.cpp  grpc_input_device_service.h
evrp-device/integrationtest/: README.md  case_connect.cpp  case_discovery.cpp  case_inputlisten.cpp  case_playback.cpp  caseconnect.cpp  casediscovery.cpp  caseinputlisten.cpp  caseplayback.cpp  device_integration_fixture.h  harness.cpp  harness.h  integration_gflags_declare.h  main.cpp
evrp-server/: CMakeLists.txt  argparser.cpp  argparser.h  main.cpp  runner.cpp  runner.h
evrp/client/: argparser.cpp  argparser.h  main.cpp  playback.cpp  playback.h  record.cpp  record.h  runner.cpp  runner.h
evrp/client/api/: evrp.cpp  evrp.h
evrp/client/impl/: argparser.cpp  argparser.h  dispatch.cpp  evrp.cpp  playback.cpp  playback.h  record.cpp  record.h  runner.cpp  runner.h
evrp/device/: localinputlistener.cpp  localinputlistener.h  stub_device_host.cpp  stub_device_host.h  stubdevicehost.cpp  stubdevicehost.h
evrp/device/api/: client.h  client_factory.h  countingsemaphore.cpp  countingsemaphore.h  cursorposition.h  deviceclient.h  devicekindsprovider.h  deviceprotoconv.cpp  host.h  inputdeviceclient.h  inputdevicekindsprovider.h  inputlistener.h  playback.h  server.h  types.h
evrp/device/client/: client.h  clientfactory.h  deviceclient.cpp  grpcdeviceclient.cpp  remoteinputdeviceclient.cpp  remoteinputdeviceclient.h  remoteinputlistener.cpp  remoteinputlistener.h  remoteplayback.cpp  remoteplayback.h
evrp/device/common/: deviceprotoconv.cpp  deviceprotoconv.h  devicesessionmetadata.h
evrp/device/impl/: countingsemaphore.cpp
evrp/device/internal/: deviceprotoconv.cpp  deviceprotoconv.h  grpc_device_client.cpp  grpc_input_device_service.cpp  grpc_input_device_service.h  grpc_server_impl.cpp  grpcdeviceclient.cpp  grpcinputdeviceservice.cpp  grpcinputdeviceservice.h  grpcserverimpl.cpp  tofromproto.cpp  tofromproto.h  types.h
evrp/device/server/: deviceruntime.cpp  deviceruntime.h  devicesessioncheck.cpp  devicesessioncheck.h  devicesessionregistry.cpp  devicesessionregistry.h  dispatchedcursorposition.cpp  dispatchedcursorposition.h  dispatchedinputdevicekindsprovider.cpp  dispatchedinputdevicekindsprovider.h  dispatchedinputlistener.cpp  dispatchedinputlistener.h  dispatchedplayback.cpp  dispatchedplayback.h  grpcdevicesessionservice.cpp  grpcdevicesessionservice.h  grpcinputdeviceservice.cpp  grpcinputdeviceservice.h  grpcinputlisten.cpp  grpcinputlisten.h  grpcplaybackservice.cpp  grpcplaybackservice.h  grpcserverimpl.cpp  host.h  localcursorposition.cpp  localcursorposition.h  localinputdevicekindsprovider.cpp  localinputdevicekindsprovider.h  localinputlistener.cpp  localinputlistener.h  localplayback.cpp  localplayback.h  server.h  syncdispatchqueue.cpp  syncdispatchqueue.h
evrp/inputlistentest/: client.cpp  server.cpp
evrp/playbacktest/: client.cpp  server.cpp
evrp/sdk/: countingsemaphore.cpp  devicediscoveryprotocol.h  devicesessioncheck.cpp  devicesessioncheck.h  devicesessionmetadata.h  devicesessionregistry.cpp  devicesessionregistry.h  evdev.cpp  evdev.h  eventcomposer.cpp  eventcomposer.h  eventformat.cpp  eventformat.h  filesystem.cpp  filesystem.h  grpcstatuscodefmt.h  inputdevice.cpp  inputdevice.h  inputeventwriter.cpp  inputeventwriter.h  ioc.h  iocontextpostedbase.cpp  iocontextpostedbase.h  iraweventwriter.h  listenaddress.cpp  listenaddress.h  logger.cpp  playbackeventcollector.cpp  playbackeventcollector.h  remoteplaybackinjector.cpp  remoteplaybackinjector.h  scopeguard.h  sessioncheck.cpp  sessioncheck.h  sessionclient.cpp  sessionclient.h  sessionmetadata.h  sessionregistry.cpp  sessionregistry.h  stringkeystore.h  (+9 more)
evrp/sdk/cursor/: cursorpos.cpp  cursorpos.h  cursorposbackend.h  cursorposx11.cpp  cursorposx11.h
evrp/sdk/filesystem/: enhancedfilesystem.cpp  enhancedfilesystem.h  filesystem.cpp  filesystem.h  ifilesystem.h  posixfilesystem.cpp  posixfilesystem.h
evrp/sdk/fml/: grpcstatuscode.cpp  grpcstatuscode.h
evrp/sdk/fmt/: grpcstatuscode.cpp
evrp/sdk/keyboard/: keyboarddevice.cpp  (+3 more)
examples/: hello.lua  keyboard.lua  mouse.lua  playback_with_lua.txt
filesystem/: filesystem.cpp  filesystem.h
keyboard/: keyboarddevice.cpp  keyboarddevice.h  keyboardeventwriter.cpp  keyboardeventwriter.h
lua/: lua_bindings.cpp  luabindings.cpp  luabindings.h
mouse/: mouseeventwriter.cpp  mouseeventwriter.h
proto/: README.md
scripts/: install-asio-to-library.sh  install-gflags-to-library.sh  install-googletest-to-library.sh  install-grpc-to-library.sh  install-log-to-library.sh  install-lua-to-library.sh  install-protobuf-to-library.sh  install-third-party-to-library.sh
tests/: argparser_test.cpp  argparsertest.cpp  input_device_test.cpp  inputdevice_test.cpp  inputdevicetest.cpp  listenaddress_test.cpp  overlaysetting_test.cpp  tofromproto_test.cpp
tools/: evrp_lua.cpp
(+175 files in other folders)
